--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -58,7 +58,7 @@ header {
         display: flex;
         flex-direction: column;
         position: absolute;
-        top: 3.4rem;
+        top: 100%;
         li {
             display: none;
         }
