Carousel banner done

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,6 @@
 @import "reset.scss";
 @import "variables.scss";
+@import "mixins";
 @import "typography";
 @import "container.scss";
 @import "./sections/all";
