--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -1,8 +1,8 @@
 @import "variables";
 
-// body {
-//     background-color: $main-bg-color;
-// }
+body {
+    background-color: $main-bg-color;
+}
 
 .container {
     max-width: 100vw; 
