--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -10,6 +10,8 @@ $menu-font-color: white;
 
 $main-bg-color: black;
 $main-accent-color: #42baa0;
+$products-bg-color: #fff;
+$photobox-title-bg-color: rgba(255,255,255, 0.5);
 
 // Margins 
 
