--- a/scss/_container.scss
+++ b/scss/_container.scss
@@ -2,6 +2,10 @@
 
 body {
     background-color: $main-bg-color;
+    height: 100vh;
+    @include flexbox {
+        flex-direction: column;
+    }
 }
 
 .container {
