--- a/scss/sections/_carousel.scss
+++ b/scss/sections/_carousel.scss
@@ -1,8 +1,18 @@
+@import "../variables";
+@import "../mixins";
+@import "../reset";
+@import "../typography";
+@import "../container";
+
 .carousel {
     margin: $body-container-margin;
     @include carousel-bg-color;
+    @include flexbox {
+        align-items: center;
+    }
     .banner {
-        height: 70vh;
+        padding-top: 5vw;
+        padding-bottom: 5vw;
         @include flexbox {
             align-items: center;
         }
@@ -23,27 +33,27 @@
         }
         .cta-wrap {
             width: 100%;
-            padding-right: 5rem;
+            padding-right: 6vw;
             margin: auto;
             @include flexbox {
                 flex-direction: column;
                 align-items: center;
             }
             h2 {
+                text-align: center;
                 font-size: 3vw;
                 span {
                     @include logo-accent-span;
                 }
             }
-            p {
+            #cta-text {
                 font-size: 1.2vw;
                 text-align: center;
                 line-height: 1.5;
-                padding: 1rem 0;
+                padding: 1.5vw 0;
             }
             .more {
-                @include button-style($main-accent-color, 1.2rem);
-                max-height: 2rem;
+                @include button-style($main-accent-color, 1.5vw);
             }
         }
     }
