--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,19 +1,20 @@
 // Font family
 
-$main-font-family: 'Raleway', sans-serif;
+$main-font-family: "Raleway", sans-serif;
 
 // Font colors
 
 $menu-font-color: white;
+$h2-font-color: #444242;
 
 // Background and accents colors
 
 $main-bg-color: black;
 $main-accent-color: #42baa0;
 $products-bg-color: #fff;
-$photobox-title-bg-color: rgba(255,255,255, 0.5);
+$photobox-title-bg-color: rgba(255, 255, 255, 0.5);
+$second-bg-color: #e8e3e3;
 
-// Margins 
+// Margins
 
 $body-container-margin: 0 3rem;
-
