--- a/scss/sections/_products.scss
+++ b/scss/sections/_products.scss
@@ -5,56 +5,74 @@
 @import "../container";
 
 .products {
-    .presentation {
-        background: $products-bg-color;
-        margin: $body-container-margin;
-        padding: 3rem 3rem;
-        @include flexbox {
-            justify-content: space-between;
-            align-items: center;
-        }
-        > * {
-            padding: 0 .5rem;
-        }
-        .photobox-wrap {
-            width: 100%;
-            position: relative;
-            img {
-                width: 100%;
-                max-width: 330px;
-            }
-            .name-of-chair {
-                position: absolute;
-                width: 100%;
-                width: 100%;
-                background: $photobox-title-bg-color;
-                bottom: 10%;
-                padding: 1vw 0;
-                @include accent-underline;
-                p {
-                    padding: .1vw 0;
-                    font-weight: 600;
-                    font-size: 1.3vw;
-                }
-            }
-        }
-        .product-box {
-            border: 1px solid rgb(211,211,211);
-            .product-box-title {
-                font-size: 1.3vw;
-                font-weight: 600;
-                position: relative;
-                padding: 1vw 0;
-                @include accent-underline {
-                    position: absolute;
-                    top: 2.3vw;
-                }
-            }
-            .product-box-text {
-                font-size: 1.2vw;
-                padding: 1vw 0;
-                line-height: 1.3;
-            }
-        }
+  .presentation {
+    background: $products-bg-color;
+    margin: $body-container-margin;
+    @include flexbox {
+      justify-content: space-between;
+      align-items: center;
     }
+    @include small-media {
+      margin: 0;
+      padding: 0;
+    }
+    .photobox-wrap {
+      width: 100%;
+      position: relative;
+      &:nth-child(1),
+      &:nth-child(2) {
+        padding-right: 5vw;
+        padding-top: 3vh;
+        padding-bottom: 3vh;
+      }
+      @include small-media {
+        &:first-child {
+          display: none;
+        }
+      }
+      img {
+        display: block;
+        margin: 0 auto;
+        width: 100%;
+        height: auto;
+      }
+      .name-of-chair {
+        position: absolute;
+        width: 100%;
+        background: $photobox-title-bg-color;
+        bottom: 16%;
+        @include accent-underline;
+        p {
+          padding: 1vh 0;
+          display: inline-block;
+          font-weight: 600;
+          font-size: 3vh;
+          @include small-media {
+            font-size: 4vh;
+          }
+        }
+      }
+    }
+    .product-box {
+      border: 1px solid rgb(211, 211, 211);
+      margin: 2vh 0;
+      .product-box-title {
+        font-size: 3vh;
+        @include small-media {
+          font-size: 4vh;
+        }
+        font-weight: 600;
+        position: relative;
+        @include accent-underline;
+      }
+      .product-box-text {
+        padding-top: 3vh;
+        font-size: 2.4vh;
+        line-height: 1.3;
+        @include small-media {
+          font-size: 4vh;
+        }
+      }
+    }
+  }
 }
